[project]
name = "tl-ninjarmm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Treeline Engineering", email = "engineering@treeline.ai" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tl-ninjarmm = "tl_ninjarmm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
