[project]
name = "tl-ninjarmm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Treeline Engineering", email = "engineering@treeline.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "requests-oauthlib>=2.0.0",
    "urllib3>=2.5.0",
]

[project.scripts]
tl-ninjarmm = "tl_ninjarmm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
